--- a/helm-chart/kace/templates/deployment.yaml
+++ b/helm-chart/kace/templates/deployment.yaml
@@ -45,6 +45,8 @@ spec:
             - '0.0.0.0:9898'
             - '-k'
             - 'uvicorn.workers.UvicornWorker'
+            - '--timeout'
+            - '3600'
           ports:
             - name: http
               containerPort: 9898
