--- a/src/k8s/templates/hdt-conversion.yaml
+++ b/src/k8s/templates/hdt-conversion.yaml
@@ -1,4 +1,4 @@
-image: containers.renci.org/frink/qendpoint:v1.16.1
+image: containers.renci.org/frink/qendpoint:v1.16.1_1
 command:
   - /bin/convert-all.sh
 
