--- a/src/k8s/templates/neo4j-json-job.yaml
+++ b/src/k8s/templates/neo4j-json-job.yaml
@@ -1,3 +1,3 @@
-image: containers.renci.org/frink/neo4j-rdf:5.22.0
+image: containers.renci.org/frink/neo4j-json:5.22.0
 command:
   - /scripts/export-data.sh
