--- a/src/k8s/templates/neo4j-rdf-job.yaml
+++ b/src/k8s/templates/neo4j-rdf-job.yaml
@@ -1,3 +1,3 @@
-image: containers.renci.org/frink/neo4j-rdf:5.22.0
+image: containers.renci.org/frink/neo4j-nt-conversion:v0.0.1
 command:
-  - /scripts/export-data.sh
+  - /code/startup.sh
