--- a/src/k8s/templates/neo4j-json-job.yaml
+++ b/src/k8s/templates/neo4j-json-job.yaml
@@ -1,3 +1,3 @@
-image: ghcr.io/frink-okn/neo4j-json-to-ttl:v0.9.1
+image: containers.renci.org/frink/neo4j-json:5.22.0
 command:
   - /scripts/export-data.sh
