--- a/src/k8s/templates/neo4j-rdf-job.yaml
+++ b/src/k8s/templates/neo4j-rdf-job.yaml
@@ -1,3 +1,3 @@
-image: containers.renci.org/frink/neo4j-nt-conversion:v0.0.2
+image: ghcr.io/frink-okn/neo4j-json-to-ttl:v0.9.1
 command:
   - /code/startup.sh
